# anime

./: Cargo.toml  LICENSE  README.md  README.qmd
.devcontainer/: postCreateCommand.sh
.github/workflows/: R-CMD-check.yaml  ci.yaml  web.yml
anime_js/: Cargo.toml
anime_js/src/: lib.rs
code/: install.R
paper/: README.md  README.qmd  refs.bib
py/: .gitignore  Cargo.toml  demo.py  pyproject.toml
py/src/: anime_compat.rs  lib.rs
r/: .gitignore  DESCRIPTION  README.md  README.qmd  bootstrap.R
r/R/: anime.R  join.R
r/dev/: edinburgh.R
r/src/rust/: Cargo.toml
r/src/rust/src/: lib.rs
rust/: Cargo.toml
rust/src/: get_matches.rs  interpolate.rs  lib.rs  overlap.rs  structs.rs
web/: README.md  index.html  package.json  vite.config.ts
web/src/: App.svelte  Options.svelte
