[workspace]
resolver = "2"
members = [
  # PyO3 library
  "py",
  # extendr crate
  "r/src/rust",
  "rust"
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.90"

[workspace.dependencies]
anime = { path = "rust" }
arrow = "55"
geo = "0.29.3"
geo-traits = "0.3.0"
geo-types = { version = "0.7.12", features = ["use-rstar_0_11"] }
rstar = "0.11.0"
geoarrow-array =  "0.4.0"
geoarrow = "0.4.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = true
codegen-units = 1
