[package]
name = "anime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "anime"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "54.2.1", default-features = false }
geoarrow = { version = "0.4.0-beta.4" }
pyo3 = { version = "0.24.1", features = ["extension-module"] }
pyo3-arrow = "0.8.0"
anime = { path = "../rust" }
