[package]
name = "anime_py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "anime"

[dependencies]
anime = { workspace = true }
arrow = { workspace = true, default-features = false }
geoarrow = { workspace = true }
geoarrow-array = { workspace = true }
geo-traits = {workspace = true }
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pyo3-arrow = "0.10.0"
