[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "anime"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "arro3-core>=0.4.2",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "geoarrow-rust-core>=0.3.0",
    "geoarrow-rust-io>=0.3.0",
    "pyarrow>=17.0.0",
]
