[package]
name = "anime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Approximate Network Matching, Integration, and Enrichment"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "gis", "network", "spatial", "transit"]
categories = ["algorithms", "science", "science::geo"]

[lib]
crate-type = ["lib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
geo = { workspace = true }
geo-traits = { workspace = true }
geo-types = { workspace = true }
rstar = { workspace = true }
