[package]
name = "anime_r"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]
name = "anime"

[dependencies]
anime = {workspace   = true}
arrow = {workspace   = true}
arrow_extendr = "55"
extendr-api = "*"
geo =   {workspace   = true}
geo-traits =  {workspace   = true}
geoarrow =  {workspace   = true}
geoarrow-array =  {workspace   = true}
itertools = "0.12.0"

[patch.crates-io]
extendr-api = { git = "https://github.com/extendr/extendr", rev = "2c2749f5e9d13d5628399c8779c47d420246a4a1" }
