[package]
name = "anime_r"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]
name = "anime"

[dependencies]
anime = { workspace = true }
arrow = { workspace = true }
arrow_extendr = "55"
extendr-api = "0.8.1"
geo = { workspace = true }
geo-traits = { workspace = true }
geoarrow = { workspace = true }
geoarrow-array = { workspace = true }
itertools = "0.12.0"
